--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,33 +1,42 @@
-name: Build Go Binaries
+# .github/workflows/release.yml
+name: goreleaser
 
 on:
+  pull_request:
   push:
-    branches: [ "main" ]
+    # run only against tags
+    tags:
+      - "*"
+
+permissions:
+  contents: write
+  # packages: write
+  # issues: write
+  # id-token: write
 
 jobs:
-  build:
+  goreleaser:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-
+        with:
+          fetch-depth: 0
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
-
-      - name: Create build directory
-        run: mkdir -p build
-
-      - name: Build macOS ARM64
-        run: GOOS=darwin GOARCH=arm64 go build -o build/ListenR-arm64 .
-
-      - name: Build Windows AMD64
-        run: GOOS=windows GOARCH=amd64 go build -o build/ListenR-amd64.exe .
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+          go-version: stable
+      # More assembly might be required: Docker logins, GPG, etc.
+      # It all depends on your needs.
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v6
         with:
-          name: binaries
-          path: build/
+          # either 'goreleaser' (default) or 'goreleaser-pro'
+          distribution: goreleaser
+          # 'latest', 'nightly', or a semver
+          version: "~> v2"
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Your GoReleaser Pro key, if you are using the 'goreleaser-pro' distribution
+          # GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
