--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,11 +2,14 @@
 name: goreleaser
 
 on:
-  pull_request:
   push:
-    # run only against tags
+    branches:
+      - main
     tags:
       - "*"
+  pull_request:
+    branches:
+      - main
 
 permissions:
   contents: write
